deploy/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 2
    spec:
      containers:
      - name: ramsey-pod
        image: jeasterman/ramsey_main
        ports:
        - containerPort: 57339
        metadata:
          labels:
            app: ramsey

      - name: gossip-pod
        image: jeasterman/gossip_main
        ports:
        - containerPort: 33957
        metadata:
          labels:
            app: gossip
