deploy/gossip-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: gossip-pod
  labels:
    app: gossip
spec:
  containers:
  - name: gossip-server
    image: jeasterman/gossip_main
    ports:
    - containerPort: 33957
