deploy/ramsey-deployment.yml
apiVersion: v1
kind: Pod
metadata:
  name: ramsey-backend
spec:
  containers:
  - name: ramsey-server
    image: jeasterman/ramsey_main
    ports:
    - containerPort: 57339
