deploy/ramsey-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: ramsey-pod
  labels:
    app: ramsey
spec:
  containers:
  - name: ramsey-server
    image: jeasterman/ramsey_main
    ports:
    - containerPort: 57339
