deploy/ramsey-service.yml
kind: Service
apiVersion: v1
metadata:
  name: ramsey-service
  annotations:
    service.beta.kubernetes.io/external-traffic: "OnlyLocal"
spec:
  type: NodePort
  selector:
    app: ramsey
  ports:
    - protocol: TCP
      port: 57339
      nodePort: 30080
